# crypto-testing

./: .gitignore  pyproject.toml  requirements.txt
scripts/: __init__.py  download_data.py  download_data_fast.py  generate_report.py  run_backtest.py
src/backtest/: engine.py  metrics.py  parameter_grid.py
src/data/: async_fetcher.py
src/portfolio/: construction.py  risk_model.py  vol_targeting.py
src/reporting/: html_report.py  visualizations.py
src/signals/: funding_rate.py  momentum.py  signal_combiner.py
